department crud done

--- a/UserManagemant/Views/Home/Update.cshtml
+++ b/UserManagemant/Views/Home/Update.cshtml
@@ -18,7 +18,7 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <form enctype="multipart/form-data" method="POST" asp-controller="home" asp-action="add" id="submit-form">
+                <form enctype="multipart/form-data" method="POST" asp-controller="home" asp-action="update"  id="submit-form">
                     <div asp-validation-summary="ModelOnly"></div>
                     <div class="row">
                         <div class="col-md-4">
