--- a/UserManagemant/Views/Home/Update.cshtml
+++ b/UserManagemant/Views/Home/Update.cshtml
@@ -99,7 +99,7 @@
             <div class="card-body">
                 <div class="form-group mt-3">
                     <button class="btn btn-primary" type="submit" form="submit-form">Save</button>
-                    <a asp-controller="product" asp-action="index" class="btn btn-danger">Cancel</a>
+                    <a asp-controller="home" asp-action="index" class="btn btn-danger">Cancel</a>
                 </div>
             </div>
         </div>
